compiler/testData/diagnostics/tests/annotations/NonAnnotationClass.kt
class Foo

<!NOT_AN_ANNOTATION_CLASS!>@Foo<!> class Bar
